fix gap to email icon on WTT share link

--- a/www/docs/style/sass/parts/_panels.scss
+++ b/www/docs/style/sass/parts/_panels.scss
@@ -65,6 +65,10 @@
     }
 
     a[href^="https://www.writetothem.com"] {
+        img {
+          margin: 0 0.2em
+        }
+
         &:after {
             content: "";
             display: inline-block;
